2867 - branch, each and parallel task dispatchers updated